modules/noosphere/taghmata/nixidy/manifests/prod/crow/Namespace-crow.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: crow
