modules/noosphere/taghmata/nixidy/manifests/prod/crow/Deployment-crowci-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: crowci
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: crow-server
    app.kubernetes.io/version: 5.1.0
    helm.sh/chart: crow-1.0.2
  name: crowci-server
  namespace: crow
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/instance: crowci
      app.kubernetes.io/name: crow-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: crowci
        app.kubernetes.io/name: crow-server
    spec:
      containers:
        - env:
            - name: CROW_ADMIN
              value: crow,admin,manjo
            - name: CROW_BACKEND_K8S_VOLUME_SIZE
              value: 2Gi
            - name: CROW_DATABASE_DATASOURCE
              value: $(uri)
            - name: CROW_DATABASE_DRIVER
              value: postgres
            - name: CROW_FORGEJO
              value: "true"
            - name: CROW_HOST
              value: https://crow.noosphere.uk
            - name: CROW_MAINTENANCE_KUBERNETES_CLEANUP_AGE
              value: 168h
            - name: FORGE_URL
              value: https://forge.manjaca.xyz
            - name: CROW_METRICS_SERVER_ADDR
              value: :9001
            - name: CROW_ENABLE_HA
              value: "true"
          image: codeberg.org/crowci/crow-server:v5.1.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
          name: crow
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
            - containerPort: 9000
              name: grpc
              protocol: TCP
            - containerPort: 9001
              name: metrics
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
          resources: {}
          securityContext: {}
      securityContext: {}
      serviceAccountName: crowci-server
