modules/noosphere/taghmata/nixidy/manifests/prod/crow/StatefulSet-crowci-agent.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: crowci
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: crow-agent
    app.kubernetes.io/version: 5.1.0
    helm.sh/chart: crow-1.0.2
  name: crowci-agent
  namespace: crow
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: crowci
      app.kubernetes.io/name: crow-agent
  serviceName: crowci-agent
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: crowci
        app.kubernetes.io/name: crow-agent
    spec:
      containers:
        - env:
            - name: CROW_SERVER
              value: crowci:9000
            - name: CROW_BACKEND_K8S_NAMESPACE
              value: crow
            - name: CROW_AGENT_SECRET
              value: $(CROW_DEFAULT_AGENT_SECRET)
            - name: CROW_BACKEND
              value: kubernetes
            - name: CROW_BACKEND_K8S_POD_ANNOTATIONS
              value: ""
            - name: CROW_BACKEND_K8S_POD_LABELS
              value: ""
            - name: CROW_BACKEND_K8S_STORAGE_CLASS
              value: ""
            - name: CROW_BACKEND_K8S_STORAGE_RWX
              value: "true"
            - name: CROW_BACKEND_K8S_VOLUME_SIZE
              value: 2Gi
            - name: CROW_CONNECT_RETRY_COUNT
              value: "1"
          image: codeberg.org/crowci/crow-agent:v5.1.0
          imagePullPolicy: IfNotPresent
          name: crow
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources: {}
          securityContext:
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /etc/crow
              name: agent-config
      securityContext:
        fsGroup: 1000
      serviceAccountName: crowci-agent
  volumeClaimTemplates:
    - metadata:
        name: agent-config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
