modules/noosphere/taghmata/nixidy/manifests/prod/crow/Service-crowci-agent.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: crowci
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: crow-agent
    app.kubernetes.io/version: 5.1.0
    helm.sh/chart: crow-1.0.2
  name: crowci-agent
  namespace: crow
spec:
  clusterIP: None
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: crowci
    app.kubernetes.io/name: crow-agent
