modules/noosphere/taghmata/nixidy/manifests/prod/crow/Service-crowci.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: crowci
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: crow-server
    app.kubernetes.io/version: 5.1.0
    helm.sh/chart: crow-1.0.2
  name: crowci
  namespace: crow
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: grpc
      port: 9000
      protocol: TCP
      targetPort: grpc
    - name: metrics
      port: 9001
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/instance: crowci
    app.kubernetes.io/name: crow-server
  type: ClusterIP
