modules/noosphere/taghmata/nixidy/manifests/prod/crow/Ingress-crowci.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    category: utils
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    glance/description: CI/CD
    glance/icon: https://codeberg.org/repo-avatars/26541ad8113b12ff2f55a506416973d715de94518717de5e8c67faa59ccd13ba
    glance/id: crowci
    glance/name: Crow CI
    glance/parent: crowci
    glance/url: https://crow.noosphere.uk
  labels:
    app.kubernetes.io/instance: crowci
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: crow-server
    app.kubernetes.io/version: 5.1.0
    helm.sh/chart: crow-1.0.2
  name: crowci
  namespace: crow
spec:
  rules:
    - host: crow.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: crowci
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - crow.noosphere.uk
      secretName: crow-tls
